--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   # PostgreSQL Database for storing weather data
   postgres:
@@ -9,7 +11,6 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
-
     networks:
       - airflow_net
 
@@ -19,9 +20,14 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-
     depends_on:
       - postgres
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.pgadmin.rule=Host(`${PGADMIN_HOST}`)
+      - traefik.http.routers.pgadmin.entrypoints=websecure
+      - traefik.http.routers.pgadmin.tls=true
+      - traefik.http.services.pgadmin.loadbalancer.server.port=80
     networks:
       - airflow_net
 
@@ -36,28 +42,40 @@ services:
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB}
       AIRFLOW__WEBSERVER__DEFAULT_USER_USERNAME: ${AIRFLOW_USER}
       AIRFLOW__WEBSERVER__DEFAULT_USER_PASSWORD: ${AIRFLOW_PASSWORD}
+      AIRFLOW__WEBSERVER__BASE_URL: https://${AIRFLOW_HOST}
+      AIRFLOW__WEBSERVER__ENABLE_PROXY_FIX: "True"
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       OPENWEATHER_API_KEY: ${OPENWEATHER_API_KEY}
     volumes:
       - ./dags:/opt/airflow/dags
-
     command: >
       bash -c "
       airflow db migrate &&
       airflow users create --username ${AIRFLOW_USER} --password ${AIRFLOW_PASSWORD} --firstname Airflow --lastname Admin --role Admin --email admin@example.com &&
       airflow webserver & airflow scheduler
       "
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.airflow.rule=Host(`${AIRFLOW_HOST}`)
+      - traefik.http.routers.airflow.entrypoints=websecure
+      - traefik.http.routers.airflow.tls=true
+      - traefik.http.services.airflow.loadbalancer.server.port=8080
     networks:
       - airflow_net
 
   # Metabase for dashboard and visualization
   metabase:
     image: metabase/metabase
-
     depends_on:
       - postgres
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.metabase.rule=Host(`${METABASE_HOST}`)
+      - traefik.http.routers.metabase.entrypoints=websecure
+      - traefik.http.routers.metabase.tls=true
+      - traefik.http.services.metabase.loadbalancer.server.port=3000
     networks:
       - airflow_net
 
